# django-pat

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  manage.py  noxfile.py  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: ci.yml  release.yml  test-pypi.yml
django_user_api_key/: admin.py  apps.py  http.py  middleware.py  models.py  views.py
django_user_api_key/migrations/: 0001_initial.py
django_user_api_key/rest_framework/: auth.py
django_user_api_key/templates/api_key/: create.html  list.html
example_project/: manage.py
example_project/example_project/: admin.py  settings.py  urls.py  views.py
example_project/example_project/templates/: base.html
script/: lint  test
src/django_pat/: admin.py  apps.py  http.py  middleware.py  models.py  permissions.py  tokens.py  urls.py  views.py
src/django_pat/migrations/: 0001_initial.py
src/django_pat/rest_framework/: auth.py  permissions.py  urls.py  views.py
src/django_pat/templates/personal_access_token/: confirm_delete.html  create.html  list.html
src/django_pat_dj_permissions/: admin.py  apps.py  models.py  permissions.py
src/django_pat_dj_permissions/migrations/: 0001_initial.py
src/django_pat_permissions/: admin.py  apps.py  models.py  permissions.py
src/django_pat_permissions/migrations/: 0001_initial.py
src/django_user_api_key/: middleware.py  models.py  urls.py
src/django_user_api_key/rest_framework/: urls.py  views.py
src/django_user_api_key/templates/api_key/: confirm_delete.html
tests/: permissions.py  settings.py  test_admin.py  test_http.py  test_middleware.py  test_models.py  urls.py
tests/rest_framework/: test_auth.py  test_permissions.py  test_views.py
