[tool.poetry]
name = "django_pat"
version = "0.1.0"
description = "A Django package for creating, using, and managing personal access tokens."
authors = ["Chris Muthig <camuthig@gmail.com>"]
license = "MIT"
packages = [
    { include = "django_pat", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.7"
django = [
    {version = "^3.2", python = "3.7"},
    {version = "^3.2 || ^4.0", python = "^3.8"},
]

djangorestframework = { version = "^3.11", optional = true }

[tool.poetry.extras]
djangorestframework = ["djangorestframework"]

[tool.poetry.dev-dependencies]
djangorestframework = "^3.11"
pytest = "^7.1"
pytest-django = "^4.5"
pre-commit = "^2.18"
flake8 = "^4.0"
black = "^22.3"
mypy = "^0.942"
django-stubs = "^1.10"
djangorestframework-stubs = "1.6.0"
nox = "^2022.1"
isort = "^5.10"
coverage = {extras = ["toml"], version = "^6.3.2"}
pytest-cov = "^4.0.0"

[tool.pytest.ini_options]
pythonpath = ["src"]
DJANGO_SETTINGS_MODULE = "tests.settings"

[tool.black]
line-length = 128

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
exclude = [
    "manage.py",
]

[tool.django-stubs]
django_settings_module = "tests.settings"

[tool.coverage.paths]
source = ["src/django_pat"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
omit = ["tests/*", "**/migrations/*", "**/__init__.py"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
