[tool.poetry]
name = "django_pat"
version = "2.0.0"
description = "A Django package for creating, using, and managing personal access tokens."
readme = "README.md"
authors = ["Chris Muthig <camuthig@gmail.com>"]
license = "MIT"
packages = [
    { include = "django_pat", from = "src" },
]
classifiers = [
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
]

[tool.poetry.dependencies]
python = ">= 3.8, < 3.13"

django = [
  { version = ">=4.0, <4.3", python = ">=3.8, <3.10" },   # Py 3.8–3.9  => 4.0–4.2
  { version = ">=4.0, <6.0", python = ">=3.10, <3.11" },  # Py 3.10     => 4.0–5.2
  { version = ">=4.1, <6.0", python = ">=3.11, <3.12" },  # Py 3.11     => 4.1–5.2
  { version = ">=4.2, <6.0", python = ">=3.12, <3.13" },  # Py 3.12     => 4.2–5.2
  { version = ">=5.1, <6.0", python = ">=3.13, <3.14" },  # Py 3.13     => 5.1–5.2
]

djangorestframework = { version = "^3.15", optional = true }

[tool.poetry.extras]
djangorestframework = ["djangorestframework"]

[tool.poetry.dev-dependencies]
djangorestframework = "^3.11"
pytest = "^7.1"
pytest-django = "^4.5"
pre-commit = "^2.18"
flake8 = "^5.0"
black = "^23.1"
mypy = "^1.0"
django-stubs = "^4.2"
djangorestframework-stubs = "^3.14.0"
nox = "^2024.4"
isort = "^5.10"
coverage = {extras = ["toml"], version = "^7.0.5"}
pytest-cov = "^4.0.0"

[tool.pytest.ini_options]
pythonpath = ["src"]
DJANGO_SETTINGS_MODULE = "tests.settings"

[tool.black]
line-length = 128

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
exclude = [
    "manage.py",
]

[tool.django-stubs]
django_settings_module = "tests.settings"

[tool.coverage.paths]
source = ["src/django_pat"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
omit = ["tests/*", "**/migrations/*", "**/__init__.py"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
